--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 <header class="site-header">
   <div class="container header-inner">
     <div class="brand">
-      <div class="avatar">PM</div>
+      <div class="avatar">
+  <img src="profile.jpg" alt="Paul Mathew">
+</div>
+
       <div class="title">
         <h1>Paul Mathew</h1>
         <p class="tagline">Computer Science & Data Science Engineering Student</p>
