--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="container header-inner">
     <div class="brand">
       <div class="avatar">
-  <img src="profile.jpg" alt="Paul Mathew">
+  <img src="img321.jpg" alt="Paul Mathew">
 </div>
 
       <div class="title">
