--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
     </div>
     <div class="hero-right">
       <div class="profile-card">
-        <div class="profile-avatar">PM</div>
+        <div class="profile-avatar">
+  <img src="img321.jpg" alt="Paul Mathew">
+</div>
+
         <h3>Paul Mathew</h3>
         <p>Data Science | Machine Learning | Web</p>
         <div class="mini-stats">
