--- a/index.html
+++ b/index.html
@@ -164,15 +164,21 @@
   </section>
 </main>
 
-<footer class="site-footer">
-  <div class="container">
-    <p>© 2025 Paul Mathew — Built with ♥ · Upload to GitHub Pages to publish</p>
-    <div class="footer-links">
-      <a href="https://github.com/" target="_blank" rel="noopener">GitHub</a>
-      <a href="https://linkedin.com/" target="_blank" rel="noopener">LinkedIn</a>
-    </div>
+<footer>
+  <div class="social-links">
+    <a href="https://www.instagram.com/mr_im_paul_sive" target="_blank">
+      <i class="fab fa-instagram"></i>
+    </a>
+    <a href="https://www.linkedin.com/in/im-paul-sive" target="_blank">
+      <i class="fab fa-linkedin"></i>
+    </a>
+    <a href="https://github.com/im-Paulsive" target="_blank">
+      <i class="fab fa-github"></i>
+    </a>
   </div>
+  <p>© 2025 Paul Mathew</p>
 </footer>
+
 
 <!-- Project modal -->
 <div id="modal" class="modal" aria-hidden="true">
